--- a/src/uLearn.Web/Views/Admin/ManualExerciseCheckingQueue.cshtml
+++ b/src/uLearn.Web/Views/Admin/ManualExerciseCheckingQueue.cshtml
@@ -50,7 +50,7 @@
 		if (Model.AlreadyChecked)
 		{
 			<hr/>
-			<div class="text-muted">Здесь будут проверенные преподавателями программы студентов</div>
+			<div class="text-muted">Здесь будут проверенные преподавателями программы студентов. Пока ничего не&nbsp;проверено.</div>
 		}
 		else
 		{
