--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -25,8 +25,8 @@
 	private static bool IsBlockCorrect(QuizBlockData model, AbstractQuestionBlock block)
 	{
 		int blockScore;
-		var isBlockCorrect = model.QuizModel != null && model.QuizModel.ResultsForQuizes != null && 
-							model.QuizModel.ResultsForQuizes.TryGetValue(block.Id, out blockScore) && blockScore == block.MaxScore;
+		var isBlockCorrect = model.QuizModel != null && model.QuizModel.ScoresForBlocks != null && 
+							model.QuizModel.ScoresForBlocks.TryGetValue(block.Id, out blockScore) && blockScore == block.MaxScore;
 		return isBlockCorrect;
 	}
 
@@ -461,7 +461,7 @@
 		<label @GetGuestOnclick(context.IsGuest)>
 			@if (block.Multiline)
 			{
-				<textarea class="form-control @quizRes" id='@( block.Id + "quizBlock")' maxlength="@QuizController.MaxFillinBlockSize" @GetGuestDisable(context.IsGuest) @readonlyAttr cols="110" rows="5">@value</textarea>
+				<textarea class="form-control @quizRes" id='@( block.Id + "quizBlock")' maxlength="@QuizController.MaxFillInBlockSize" @GetGuestDisable(context.IsGuest) @readonlyAttr cols="110" rows="5">@value</textarea>
 			}
 			else
 			{
@@ -469,7 +469,7 @@
 					autocomplete="off"
 					class="form-control @quizRes"
 					value="@value" id='@( block.Id + "quizBlock")'
-					maxlength="@QuizController.MaxFillinBlockSize"
+					maxlength="@QuizController.MaxFillInBlockSize"
 					size="68"
 					@GetGuestDisable(context.IsGuest)
 					@readonlyAttr/>
