--- a/src/uLearn.Web/Views/Quiz/Quiz.cshtml
+++ b/src/uLearn.Web/Views/Quiz/Quiz.cshtml
@@ -13,7 +13,15 @@
 	var status = "";
 	var triesCountMessage = Model.MaxTriesCount == QuizController.InfinityTriesCount ? "∞ (преподаватели не ограничены в попытках)" : Model.MaxTriesCount.ToString();
 	const string allTriesExceeded = "Использованы все попытки. Вы можете пройти тест ещё раз, но ваши баллы за него не изменятся";
-	if (!Model.IsGuest && Model.QuizState == QuizState.NotPassed)
+	if (Model.Checking != null)
+	{
+		status = string.Format("{0}, попытка {1} из {2}",
+			Model.Checking.User.VisibleName,
+			Model.TryNumber,
+			Model.Slide.MaxTriesCount
+			);
+	}
+	else if (!Model.IsGuest && Model.QuizState == QuizState.NotPassed)
 	{
 		if (Model.MaxTriesCount == QuizController.InfinityTriesCount || Model.TryNumber < Model.MaxTriesCount)
 		{
@@ -54,13 +62,6 @@
 		{
 			status = allTriesExceeded;
 		}
-	}
-	else if (Model.ManualQuizCheckQueueItem != null)
-	{
-		status = string.Format("{0}, попытка {1} из {2}",
-			Model.ManualQuizCheckQueueItem.User.VisibleName,
-			Model.TryNumber,
-			triesCountMessage);
 	}
 	else if (Model.QuizState == QuizState.WaitForCheck)
 	{
@@ -110,24 +111,24 @@
 		blockData,
 		isGuest: Model.IsGuest,
 		revealHidden: true,
-		manualChecking: Model.ManualQuizCheckQueueItem,
+		manualChecking: Model.Checking,
 		canUserFillQuiz: Model.CanUserFillQuiz,
 		groupsIds: null,
 		isLti: Model.IsLti
 		);
 
 	MvcForm form = null;
-	if (Model.ManualQuizCheckQueueItem != null)
+	if (Model.Checking != null)
 	{
 		form = Html.BeginForm("ScoreQuiz", "Quiz", FormMethod.Post, new { id = "quiz__score-form" });
 	}
 
 	using (form)
 	{
-		if (Model.ManualQuizCheckQueueItem != null)
+		if (Model.Checking != null)
 		{
-			@Html.Hidden("id", Model.ManualQuizCheckQueueItem.Id)
-			@Html.Hidden("errorUrl", Url.RouteUrl("Course.SlideById", new { courseId = Model.Course.Id, slideId = Model.Slide.Url, CheckQueueItemId = Model.ManualQuizCheckQueueItem.Id, group = Model.GroupsIdsJoined }) + "&error=")
+			@Html.Hidden("id", Model.Checking.Id)
+			@Html.Hidden("errorUrl", Url.RouteUrl("Course.SlideById", new { courseId = Model.Course.Id, slideId = Model.Slide.Url, CheckQueueItemId = Model.Checking.Id, group = Model.GroupsIdsJoined }) + "&error=")
 			@Html.Hidden("nextUrl", Url.Action("ManualQuizCheckingQueue", "Admin", new { courseId = Model.Course.Id, group = Model.GroupsIdsJoined }))
 		}
 		<div class="quiz__blocks">
@@ -138,20 +139,23 @@
 	if (!Model.IsGuest)
 	{
 		<div id="SubmitQuiz" data-url='@Url.Action("SubmitQuiz", "Quiz")'>
-			@if (Model.QuizState == QuizState.NotPassed)
+			@if (Model.Checking != null)
+			{
+				<input type="submit" class="btn @(Model.Checking.IsChecked ? "btn-primary" : "btn-default") quiz-button" form="quiz__score-form" value="Сохранить и вернуться">
+				if (!Model.Checking.IsChecked)
+				{
+					<input type="submit" class="btn btn-primary quiz-button" form="quiz__score-form" value="Сохранить и перейти к следующему"
+							data-url="@Url.Action("CheckNextQuizForSlide", "Admin", new { courseId = Model.Course.Id, slideId = Model.Slide.Id, group = Model.GroupsIdsJoined })"
+							onclick="$('[name=nextUrl]').val($(this).data('url'))">
+				}
+			}
+			else if (Model.QuizState == QuizState.NotPassed)
 			{
 				<button class="btn btn-primary quiz-button quiz-submit-btn" onclick="submitQuiz('@Model.Course.Id', '@Model.Slide.Id', '@Model.AnswersToQuizes.Count', @Model.IsLtiToString) ">Готово!</button>
 			}
-			else if (Model.QuizState == QuizState.WaitForCheck && Model.ManualQuizCheckQueueItem == null)
+			else if (Model.QuizState == QuizState.WaitForCheck)
 			{
 				<button class="btn btn-primary quiz-button quiz-submit-btn" onclick="submitQuiz('@Model.Course.Id', '@Model.Slide.Id', '@Model.AnswersToQuizes.Count', @Model.IsLtiToString) ">Переотправить ответы</button>
-			}
-			else if (Model.QuizState == QuizState.IsChecking && Model.ManualQuizCheckQueueItem != null)
-			{
-				<input type="submit" class="btn btn-default quiz-button" form="quiz__score-form" value="Сохранить и вернуться">
-				<input type="submit" class="btn btn-primary quiz-button" form="quiz__score-form" value="Сохранить и перейти к следующему"
-						data-url="@Url.Action("CheckNextQuizForSlide", "Admin", new { courseId = Model.Course.Id, slideId = Model.Slide.Id, group = Model.GroupsIdsJoined })"
-						onclick="$('[name=nextUrl]').val($(this).data('url'))">
 			}
 			else if (Model.QuizState == QuizState.Subtotal || Model.QuizState == QuizState.Total && !Model.Slide.ManualChecking)
 			{
