--- a/src/uLearn.Web/Views/Course/StandaloneLayout.cshtml
+++ b/src/uLearn.Web/Views/Course/StandaloneLayout.cshtml
@@ -37,7 +37,7 @@
 								: b is AbstractQuestionBlock
 									? new QuizBlockData(new QuizModel
 									{
-										AnswersToQuizes = slide.Blocks.OfType<AbstractQuestionBlock>().ToDictionary(x => x.Id, x => new List<UserQuiz>()),
+										AnswersToQuizes = slide.Blocks.OfType<AbstractQuestionBlock>().ToDictionary(x => x.Id, x => new List<UserQuizAnswer>()),
 										Slide = (QuizSlide)slide
 									}, i, QuizState.Total, debugView: true)
 									: (dynamic)null
