--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -1,4 +1,4 @@
-@* Generator: MvcHelper GeneratePrettyNames: true DisableLinePragmas: true *@
+﻿@* Generator: MvcHelper GeneratePrettyNames: true DisableLinePragmas: true *@
 @using System.Linq
 @using Database.Models
 @using uLearn.Web.Clients
@@ -25,8 +25,8 @@
 	private static bool IsBlockCorrect(QuizBlockData model, AbstractQuestionBlock block)
 	{
 		int blockScore;
-		var isBlockCorrect = model.QuizModel != null && model.QuizModel.ScoresForBlocks != null && 
-							model.QuizModel.ScoresForBlocks.TryGetValue(block.Id, out blockScore) && blockScore == block.MaxScore;
+		var isBlockCorrect = model.QuizModel != null && model.QuizModel.UserScores != null && 
+							model.QuizModel.UserScores.TryGetValue(block.Id, out blockScore) && blockScore == block.MaxScore;
 		return isBlockCorrect;
 	}
 
@@ -113,7 +113,8 @@
         {
             <h4>Оцените от 0 до @block.MaxScore</h4>
             <div>
-                <input type="number" class="form-control" min="0" max="@block.MaxScore" name="quiz__score__@( block.Id)"/>
+				<input type="number" class="form-control" min="0" max="@block.MaxScore" name="quiz__score__@( block.Id)"
+						value="@(context.ManualChecking.IsChecked ? context.UserScores.GetOrDefault(block.Id).ToString() : "")"/>
             </div>
         }
     </div>
