Added CommentSendForm component.

--- a/src/uLearn.Web/Views/Comments/SlideComments.cshtml
+++ b/src/uLearn.Web/Views/Comments/SlideComments.cshtml
@@ -62,6 +62,8 @@
 	var forEveryoneTopLevelComments = Model.TopLevelComments.Where(c => !c.IsForInstructorsOnly).ToList();
 }
 
+<div class="react-render" data-component="CommentSendForm" data-props="{}"></div>
+
 <h3>Комментарии</h3>
 
 @if (Model.CanViewAndAddCommentsForInstructorsOnly)
