--- a/src/Frontend/src/components/groups/GroupSettingsPage/GroupMembers/GroupStudents/groupStudents.less
+++ b/src/Frontend/src/components/groups/GroupSettingsPage/GroupMembers/GroupStudents/groupStudents.less
@@ -41,4 +41,8 @@
   justify-content: flex-start;
   flex-direction: column;
   width: fit-content;
+
+  & > label > div > * {
+	  vertical-align: top;
+  }
 }
