--- a/src/Frontend/src/components/common/Error/style.less
+++ b/src/Frontend/src/components/common/Error/style.less
@@ -1,3 +1,5 @@
+@import "../../../variables";
+
 .wrapper {
   width: 100%;
   background: #fff;
@@ -9,9 +11,18 @@
   margin-top: 40px;
   margin-bottom: 40px;
   max-height: 80%;
+
+  @media (max-width: @maxPhoneWidth) {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
 }
 
 .text {
   width: 50%;
   margin: 0 auto;
+
+  @media (max-width: @maxPhoneWidth) {
+    width: 100%;
+  }
 }
