--- a/src/Frontend/src/components/groups/GroupMainPage/GroupHeader/groupHeader.less
+++ b/src/Frontend/src/components/groups/GroupMainPage/GroupHeader/groupHeader.less
@@ -1,26 +1,25 @@
 @import "../../../../variables.less";
-@indent: 27px;
+
+@indent: 50px;
+@tableIndent: 25px;
+@phoneIndent: 15px;
 
 .header {
   width: 100%;
   margin: 0 auto;
   background: #fff;
-  border-bottom: 1px solid #eee;
-  padding: 30px 0 0;
 
-  @media (max-width: @maxTabletWidth) {
+  @media (max-width: @maxPhoneWidth) {
 	display: block;
-	padding: 30px @indent 0;
   }
 }
 
 .header-container {
   display: flex;
   justify-content: space-between;
-  width: 80%;
   margin: 0 auto;
 
-  @media (max-width: @maxTabletWidth) {
+  @media (max-width: @maxPhoneWidth) {
 	display: block;
 	width: 100%;
   }
@@ -33,7 +32,6 @@
   line-height: 30px;
   border: none;
   margin: 0;
-  align-self: center;
 
   @media (max-width: @maxPhoneWidth) {
 	font-size: 22px;
@@ -42,35 +40,51 @@
 }
 
 .buttons-container {
-   margin: 20px 0;
+  margin-bottom: 20px;
 
-   button {
-	 @media (max-width: @maxPhoneWidth) {
-	   font-size: 14px;
-	 }
-   }
- }
+  @media (max-width: @maxPhoneWidth) {
+	margin-bottom: 0;
+
+    button {
+      font-size: 14px;
+      margin-bottom: 15px;
+      margin-top: 15px;
+    }
+  }
+}
 
 .tabs-container {
-  width: 80%;
-  margin: 35px auto -1px;
+  margin: 0 -@indent 0 -@indent;
+  padding-left: @indent;
+  border-bottom: 1px solid #eee;
 
   @media (max-width: @maxTabletWidth) {
 	width: 100%;
+    margin: 0 -@tableIndent 0 -@tableIndent;
+    padding-left: @tableIndent;
+  }
+
+  @media (max-width: @maxPhoneWidth) {
+    margin: 0 -@phoneIndent 0 -@phoneIndent;
+    padding-left: @phoneIndent;
   }
 
   a {
 	@media (max-width: @maxPhoneWidth) {
-	  font-size: 16px;
+	  font-size: 14px;
+	  padding: 7px 0;
+	  margin-left: 7px;
+	  margin-right: 7px;
+
+	  &:first-child {
+		margin-left: 20px;
+	  }
 	}
-  }
 
-  a:hover {
-	text-decoration: none;
-  }
-
-  a:focus {
-	text-decoration: none;
+    &:hover,
+    &:focus {
+	  text-decoration: none;
+    }
   }
 }
 
