--- a/src/Frontend/src/components/groups/GroupMainPage/GroupList/groupList.less
+++ b/src/Frontend/src/components/groups/GroupMainPage/GroupList/groupList.less
@@ -1,17 +1,15 @@
 @import "../../../../variables.less";
-@indent: 27px;
+@indent: 50px;
 
 .wrapper {
-  margin: 30px auto;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  width: 80%;
   height: 100%;
 
   @media (max-width: @maxTabletWidth) {
-	margin: 30px 0;
-	width: 100%;
+    width: 100%;
   }
 
   label {
@@ -40,5 +38,15 @@
 
   @media (max-width: @maxTabletWidth) {
 	margin: 0;
+  }
+}
+
+.noGroups {
+  margin-top: 30px;
+  max-width: 800px;
+  color: #666;
+
+  @media (max-width: @maxPhoneWidth) {
+    margin-top: 15px;
   }
 }
