--- a/src/Frontend/src/components/groups/GroupSettingsPage/GroupMembers/InviteBlock/inviteBlock.less
+++ b/src/Frontend/src/components/groups/GroupSettingsPage/GroupMembers/InviteBlock/inviteBlock.less
@@ -14,7 +14,7 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: baseline;
-  margin: 5px 0 10px;
+  margin: 0 0 10px;
   cursor: pointer;
 }
 
