--- a/src/Frontend/src/components/groups/GroupSettingsPage/GroupMembers/groupMembers.less
+++ b/src/Frontend/src/components/groups/GroupSettingsPage/GroupMembers/groupMembers.less
@@ -6,14 +6,18 @@
 }
 
 .teachers {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
-.teachers-header {
-  margin: 20px 0 10px 0;
+.teachers-header,
+.students-header {
+  font-weight: 500;
+  font-size: 18px;
+  margin: 0 0 7px 0;
 }
 
 .teachers-info {
+  margin-top: 0;
   margin-bottom: 10px;
 }
 
@@ -47,12 +51,12 @@
   label {
 	margin-bottom: 0;
   }
+
+  p {
+    margin-top: 0;
+  }
 }
 
 .teacher-action {
   margin-left: auto;
-}
-
-.students-header {
-	margin: 0 0 15px 0;
 }
