--- a/src/uLearn.Web/Content/Site.css
+++ b/src/uLearn.Web/Content/Site.css
@@ -1,6 +1,5 @@
 ﻿body {
 	padding-top: 50px;
-	padding-bottom: 20px;
 	font-family: "Segoe UI", Arial, sans-serif;
 }
 
@@ -12,6 +11,10 @@ body.without-topbar {
 .legacy-page .body-content {
     padding-left: 15px;
     padding-right: 15px;
+}
+
+.legacy-page {
+	padding-bottom: 20px;
 }
 
 /* Set width on the form input elements since they're 100% wide by default */
