--- a/src/Frontend/src/components/groups/GroupMainPage/GroupHeader/groupHeader.less
+++ b/src/Frontend/src/components/groups/GroupMainPage/GroupHeader/groupHeader.less
@@ -1,7 +1,7 @@
 @import "../../../../variables.less";
 
 @indent: 50px;
-@tableIndent: 25px;
+@tabletIndent: 25px;
 @phoneIndent: 15px;
 
 .header {
@@ -59,9 +59,8 @@
   border-bottom: 1px solid #eee;
 
   @media (max-width: @maxTabletWidth) {
-	width: 100%;
-    margin: 0 -@tableIndent 0 -@tableIndent;
-    padding-left: @tableIndent;
+    margin: 0 -@tabletIndent 0 -@tabletIndent;
+    padding-left: @tabletIndent;
   }
 
   @media (max-width: @maxPhoneWidth) {
