--- a/src/uLearn.Web/Views/Quiz/Quiz.cshtml
+++ b/src/uLearn.Web/Views/Quiz/Quiz.cshtml
@@ -158,6 +158,7 @@
 			else if (Model.QuizState.Status == QuizStatus.WaitsForManualChecking)
 			{
 				<button class="btn btn-primary quiz-button quiz-submit-btn" onclick="submitQuiz('@Model.Course.Id', '@Model.Slide.Id', '@Model.AnswersToQuizzes.Count', @Model.IsLtiToString) ">Переотправить ответы</button>
+				<small class="quiz__remains">Вы не потратите дополнительную попытку, пока преподаватель не проверил ваши ответы</small>
 			}
 			/* Quizzes with enabled manual checking can not be resend if user have used all attempts already */
 			else if (Model.QuizState.Status == QuizStatus.Sent && (!Model.Slide.ManualChecking || Model.QuizState.UsedAttemptsCount < Model.MaxAttemptsCount))
