Don't underline "ещё 1" link on groups page after hover
+ rename item in header course menu
+ continue remove legacy groups code

--- a/src/Frontend/src/components/groups/GroupMainPage/GroupInfo/groupInfo.less
+++ b/src/Frontend/src/components/groups/GroupMainPage/GroupInfo/groupInfo.less
@@ -20,7 +20,7 @@
   &:hover {
 	background-color: rgba(0,0,0,.02);
 
-    a {
+    a.groupLink {
 	  text-decoration: underline;
       text-decoration-color: #3072c4;
     }
@@ -64,6 +64,11 @@
 
   a {
     text-decoration: none;
+    color: @linkColor;
+  }
+
+  a:hover {
+    text-decoration: underline;
   }
 }
 
