--- a/src/uLearn.Web/Content/exercise/student-submissions.css
+++ b/src/uLearn.Web/Content/exercise/student-submissions.css
@@ -1,86 +1,86 @@
-.student-submissions {
+.legacy-page .student-submissions {
     font-size: 15px;
     margin-bottom: 40px;
     margin-top: 30px;
 }
 
 @media(max-width: 720px) {
-    .student-submissions {
+	.legacy-page .student-submissions {
         font-size: 14px;
     }
 }
 
-.student-submissions table {
+.legacy-page .student-submissions table {
     margin-left: -5px;
     width: 100%;
 }
 
-.student-submissions table th,
-.student-submissions table td {
+.legacy-page .student-submissions table th,
+.legacy-page .student-submissions table td {
     padding: 5px 40px 3px 5px;
 }
 
-.student-submissions table th:last-child,
-.student-submissions table td:last-child {
+.legacy-page .student-submissions table th:last-child,
+.legacy-page .student-submissions table td:last-child {
     padding-right: 3px;
 }
 
 @media(max-width: 720px) {
-    .student-submissions table th,
-    .student-submissions table td {
+	.legacy-page .student-submissions table th,
+	.legacy-page .student-submissions table td {
         padding-right: 15px;
     }
 }
 
-.student-submissions table thead th {
+.legacy-page .student-submissions table thead th {
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     padding-bottom: 10px;
 }
 
 
-.student-submissions__comment-row td {
+.legacy-page .student-submissions__comment-row td {
     border-top: 1px solid rgba(0, 0, 0, 0.06);
     color: #999;
     font-size: 14px;
 }
 
-.student-submissions table tbody .student-submissions__show-all td {
+.legacy-page .student-submissions table tbody .student-submissions__show-all td {
     text-align: center;
     padding-top: 0;    
 }
 
-.student-submissions table tbody td {
+.legacy-page .student-submissions table tbody td {
     padding-top: 10px;
     padding-bottom: 10px;
     vertical-align: top;
 }
 
-.student-submissions table tbody tr.has-submissions:hover {       
+.legacy-page .student-submissions table tbody tr.has-submissions:hover {       
     background-color: #E4F3FF;
     cursor: pointer;
 }
 
-.student-submissions table tbody tr.has-submissions:hover a {
+.legacy-page .student-submissions table tbody tr.has-submissions:hover a {
     text-decoration: underline;
 }
 
-.student-submissions__filter {
+.legacy-page .student-submissions__filter {
     margin-bottom: 20px;
     margin-top: 20px;
 }
 
-.student-submissions__filter__input {
+.legacy-page .student-submissions__filter__input {
     display: inline-block;
     margin-right: 5px;
     max-width: 300px;
 }
 
-.student-submissions__filter .loading-icon {
+.legacy-page .student-submissions__filter .loading-icon {
     color: rgba(0, 0, 0, 0.8);
     top: 2px;
 }
 
-.student-submissions__name-column {
+.legacy-page .student-submissions__name-column {
     min-width: 200px;
     max-width: 350px;
     width: 350px;
@@ -89,12 +89,12 @@
 }
 
 @media(max-width: 720px) {
-    .student-submissions__name-column {
+	.legacy-page .student-submissions__name-column {
         min-width: 100px;
     }
 }
 
-.student-submissions__group-names {
+.legacy-page .student-submissions__group-names {
     font-size: 11px;
     color: #999;
 }
