--- a/src/uLearn.Web/Views/Admin/Courses.cshtml
+++ b/src/uLearn.Web/Views/Admin/Courses.cshtml
@@ -27,13 +27,14 @@
 		using (Html.BeginForm("CreateCourse", "Admin", FormMethod.Post, new { @class = "form-inline" }))
 		{
 			@Html.AntiForgeryToken()
-			<input type="text" class="form-control" name="courseId" value="@Model.CourseCreationLastTry" placeholder="CourseId"/>
+			<input type="text" class="form-control" name="courseId" value="@Model.LastTryCourseId" placeholder="CourseId"/>
+			<input type="text" class="form-control" name="courseTitle" value="@Model.LastTryCourseTitle" placeholder="Заголовок курса"/>
 			<input type="submit" class="btn btn-danger" value="Создать"/>
 			<p class="text-muted">CourseId используется как часть URL, имя файла, часть путей. Лучше использовать только латинские буквы и цифры.</p>
 		}
-		if (!string.IsNullOrEmpty(Model.CourseCreationLastTry))
+		if (!string.IsNullOrEmpty(Model.LastTryCourseId))
 		{
-			<div style="margin: 10px">В идентификаторе курса недопустимы символы: <pre style="display: inline-block">@Model.InvalidCharacters</pre>
+			<div style="margin: 10px">Что-то пошло не так. Вероятно, в CourseId присутствуют недопустимы символы: <pre style="display: inline-block">@Model.InvalidCharacters</pre>
 			</div>
 		}
 	}
